--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         // Cache buster for development - forces fresh module loads
         const cacheBuster = Date.now();
         const modules = [
+            'modules/mastery-tracker.js',
             'modules/passages.js',
             'modules/vocabulary.js',
             'modules/writing.js',
