--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
                 Daily Goal: 0/10 activities
             </div>
         </div>
+        
+        <div style="display: flex; gap: 10px; justify-content: center; margin: 20px 0;">
+            <button class="parent-access-btn" onclick="showParentAccess()">👨‍👩‍👦 Parent Access</button>
+            <button class="parent-access-btn" onclick="AchievementsModule.showAchievementsGallery()" 
+                    style="background: linear-gradient(135deg, #fbbf24 0%, #f59e0b 100%);">
+                🏆 Achievements
+            </button>
+        </div>
+        
         <div id="topicSelection">
             <h2 style="text-align: center; margin: 20px 0; color: #667eea;">Choose Your Practice Area:</h2>
             <div class="topic-grid" id="topicGrid">
