--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
         </div>
         
         <div style="display: flex; gap: 10px; justify-content: center; margin: 20px 0;">
-            <button class="parent-access-btn" onclick="showParentAccess()">👨‍👩‍👦 Parent Access</button>
+            <button class="parent-access-btn" onclick="showParentAccess()"
+                    style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
+                👨‍👩‍👦 Parent Access
+            </button>
             <button class="parent-access-btn" onclick="AchievementsModule.showAchievementsGallery()" 
                     style="background: linear-gradient(135deg, #fbbf24 0%, #f59e0b 100%);">
                 🏆 Achievements
