--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
             <h1>📚 Jordan's English Practice ⚽</h1>
             <p>Build your reading and writing skills!</p>
         </div>
+        <!-- Current Grade Level Display -->
+        <div class="current-grade-display" id="gradeDisplay">
+            <div class="grade-level-big" id="currentGradeLevel">4th Grade</div>
+            <div class="grade-target">Target: 6th Grade</div>
+            <div class="grade-progress-bar">
+                <div class="grade-progress-fill" id="gradeProgressFill" style="width: 50%"></div>
+            </div>
+            <div style="margin-top: 8px; font-size: 0.9em; opacity: 0.9;">
+                <span id="dayStreakDisplay">🔥 0 day streak</span>
+            </div>
+        </div>
+
         <div class="stats-bar">
             <div class="stat-item">
                 <div class="stat-value" id="readingLevel">4th</div>
